--- a/students.html
+++ b/students.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Student Portal | Essien's Excellence Academy</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
@@ -29,7 +29,9 @@
         <input type="password" id="signup-password" placeholder="Password" required />
         <button type="submit">Create Account</button>
       </form>
-      <hr class="divider"/>
+
+      <hr class="divider" />
+
       <form id="login-form">
         <input type="email" id="login-email" placeholder="Email" required />
         <input type="password" id="login-password" placeholder="Password" required />
