--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
       font-weight: 700;
     }
 
-    /* Site Logo Styles */
+    /* Site Logo Styles - Made larger */
     .site-logo {
-      width: 60px;
+      width: 80px; /* Increased from 60px to 80px */
       height: auto;
       border-radius: 8px;
     }
@@ -315,9 +315,9 @@
         margin-left: 10px;
       }
       
-      /* Site Logo on Mobile */
+      /* Site Logo on Mobile - Made larger */
       .site-logo {
-        width: 48px;
+        width: 64px; /* Increased from 48px to 64px */
       }
       
       nav {
