--- a/about.html
+++ b/about.html
@@ -727,9 +727,9 @@
             <div class="staff-grid">
                 <div class="staff-member">
                     <div class="staff-img">👨‍🏫</div>
-                    <h4>Dr. Samuel Essien</h4>
+                    <h4>Mr. Joseph Martin Kojo Essien</h4>
                     <div class="staff-role">Founder & Director</div>
-                    <p>M.Ed. Educational Leadership, 20+ years experience</p>
+                    <p>M.Ed. Educational Leadership, 17+ years experience</p>
                 </div>
                 <div class="staff-member">
                     <div class="staff-img">👩‍🏫</div>
