--- a/about.html
+++ b/about.html
@@ -727,7 +727,7 @@
             <div class="staff-grid">
                 <div class="staff-member">
                     <div class="staff-img">👨‍🏫</div>
-                    <h4>Mr. Joseph Martin Kojo Essien</h4>
+                    <h4>Mr. Joseph Martin Essien</h4>
                     <div class="staff-role">Founder & Director</div>
                     <p>M.Ed. Educational Leadership, 17+ years experience</p>
                 </div>
