--- a/academics.html
+++ b/academics.html
@@ -958,31 +958,31 @@
                 <div class="resource-card">
                     <h4>Learning Materials</h4>
                     <ul class="resource-links">
-                        <li><a href="#">Textbook Lists by Grade</a></li>
-                        <li><a href="#">Recommended Reading</a></li>
-                        <li><a href="#">Study Guides</a></li>
-                        <li><a href="#">Past Exam Papers</a></li>
-                        <li><a href="#">Research Resources</a></li>
+                        <li><a href="https://openstax.org/subjects" target="_blank">Textbook Lists by Grade</a></li>
+                        <li><a href="https://www.goodreads.com/list/tag/school" target="_blank">Recommended Reading</a></li>
+                        <li><a href="https://www.khanacademy.org" target="_blank">Study Guides</a></li>
+                        <li><a href="https://papers.gceguide.com/" target="_blank">Past Exam Papers</a></li>
+                        <li><a href="https://scholar.google.com/" target="_blank">Research Resources</a></li>
                     </ul>
                 </div>
                 <div class="resource-card">
                     <h4>Digital Tools</h4>
                     <ul class="resource-links">
-                        <li><a href="#">Online Library Access</a></li>
-                        <li><a href="#">Educational Apps</a></li>
-                        <li><a href="#">Learning Platforms</a></li>
-                        <li><a href="#">Coding Resources</a></li>
-                        <li><a href="#">Digital Citizenship</a></li>
+                        <li><a href="https://www.gutenberg.org/" target="_blank">Online Library Access</a></li>
+                        <li><a href="https://www.duolingo.com/" target="_blank">Educational Apps</a></li>
+                        <li><a href="https://www.edx.org/" target="_blank">Learning Platforms</a></li>
+                        <li><a href="https://www.w3schools.com/" target="_blank">Coding Resources</a></li>
+                        <li><a href="https://www.commonsense.org/education/digital-citizenship" target="_blank">Digital Citizenship</a></li>
                     </ul>
                 </div>
                 <div class="resource-card">
                     <h4>Academic Support</h4>
                     <ul class="resource-links">
-                        <li><a href="#">Tutoring Schedule</a></li>
-                        <li><a href="#">Homework Help</a></li>
-                        <li><a href="#">Study Skills Tips</a></li>
-                        <li><a href="#">Test Preparation</a></li>
-                        <li><a href="#">Teacher Office Hours</a></li>
+                        <li><a href="https://www.tutor.com/" target="_blank">Tutoring Schedule</a></li>
+                        <li><a href="https://www.bbc.co.uk/bitesize" target="_blank">Homework Help</a></li>
+                        <li><a href="https://www.mindtools.com/pages/main/newMN_HTE.htm" target="_blank">Study Skills Tips</a></li>
+                        <li><a href="https://quizlet.com/" target="_blank">Test Preparation</a></li>
+                        <li><a href="contact.html">Teacher Office Hours</a></li>
                     </ul>
                 </div>
             </div>
