--- a/about.html
+++ b/about.html
@@ -258,7 +258,7 @@
             top: 20px;
             z-index: 1;
             left: 50%;
-            margin-left: -10px;
+            margin-left: -10px; /* This ensures the circle is centered on the line */
         }
         
         /* Staff Section */
