--- a/about.html
+++ b/about.html
@@ -693,7 +693,7 @@
                 <div class="timeline-item">
                     <div class="timeline-content">
                         <h4>2005</h4>
-                        <p>Essien's Excellence Academy was founded with just 35 students and 3 teachers, operating from a small building in the community.</p>
+                        <p>Essien's Excellence Academy was founded with just 5 students and a teachers, operating from a small building in the community.</p>
                     </div>
                 </div>
                 <div class="timeline-item">
@@ -705,7 +705,7 @@
                 <div class="timeline-item">
                     <div class="timeline-content">
                         <h4>2015</h4>
-                        <p>Celebrated our 10th anniversary and introduced the STEM program, focusing on science, technology, engineering, and mathematics.</p>
+                        <p>Celebrated our 10th anniversary and introduced the STEM program, focusing on science, technology, and mathematics.</p>
                     </div>
                 </div>
                 <div class="timeline-item">
