--- a/academics.html
+++ b/academics.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Academics - Essien's Excellence Academy</title>
+    <link rel="icon" href="logo.png" type="image/png">
+    <link rel="shortcut icon" href="logo.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
@@ -1048,21 +1050,21 @@
                 <div class="footer-section">
                     <h3>Contact Us</h3>
                     <p>Email: info@essienacademy.edu.gh</p>
-                    <p>Phone: +233 XX XXX XXXX</p>
-                    <p>Address: Education Street, Academic City, Ghana</p>
+                    <p>Phone: +233 24 260 1747</p>
+                    <p>Address: Adjuah Street, Takoradi, Ghana</p>
                 </div>
                 <div class="footer-section">
                     <h3>Quick Links</h3>
                     <a href="admissions.html">Admissions</a>
                     <a href="academics.html">Academic Calendar</a>
-                    <a href="policies.html">School Policies</a>
-                    <a href="resources.html">Lunch Menu</a>
+                    <a href="about.html">School Policies</a>
+                    <a href="contact.html">Lunch Menu</a>
                 </div>
                 <div class="footer-section">
                     <h3>Follow Us</h3>
                     <a href="#">Facebook</a>
                     <a href="#">Instagram</a>
-                    <a href="#">Twitter</a>
+                    <a href="#">WhatsApp</a>
                     <a href="#">YouTube</a>
                 </div>
             </div>
