--- a/admissions.html
+++ b/admissions.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admissions - Essien's Excellence Academy</title>
+    <!-- Favicon -->
+    <link rel="icon" href="logo.png" type="image/png">
+    <link rel="shortcut icon" href="logo.png" type="image/png">
     <style>
         :root {
             --primary: #000000;
@@ -1002,21 +1005,23 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>Contact Us</h3>
-                    <p>Email: admissions@essienacademy.edu.gh</p>
-                    <p>Phone: +233 XX XXX XXXX</p>
-                    <p>Address: Education Street, Academic City, Ghana</p>
+                    <p>Email: info@essienacademy.edu.gh</p>
+                    <p>Phone: +233 24 260 1747</p>
+                    <p>Address: Adjuah Street, Takoradi, Ghana</p>
                 </div>
                 <div class="footer-section">
                     <h3>Quick Links</h3>
-                    <a href="admissions.html">Application Process</a>
-                    <a href="academics.html">Academic Programs</a>
-                    <a href="policies.html">School Policies</a>
-                    <a href="resources.html">Tuition Information</a>
+                    <a href="admissions.html">Admissions</a>
+                    <a href="academics.html">Academic Calendar</a>
+                    <a href="about.html">School Policies</a>
+                    <a href="contact.html">Lunch Menu</a>
                 </div>
                 <div class="footer-section">
-                    <h3>Schedule a Visit</h3>
-                    <p>We welcome campus tours throughout the year. Contact us to schedule your visit.</p>
-                    <a href="contact.html" class="btn" style="padding: 8px 20px; margin-top: 10px;">Schedule Tour</a>
+                    <h3>Follow Us</h3>
+                    <a href="#">Facebook</a>
+                    <a href="#">Instagram</a>
+                    <a href="#">WhatsApp</a>
+                    <a href="#">YouTube</a>
                 </div>
             </div>
             <div class="copyright">
