--- a/contact.html
+++ b/contact.html
@@ -871,29 +871,29 @@
                     <div class="staff-img">👨‍🏫</div>
                     <h4>Mr. Joseph Martin Essien</h4>
                     <div class="staff-role">Founder & Director</div>
-                    <p class="staff-contact">Email: j.essien@essienacademy.edu.gh</p>
-                    <p class="staff-contact">Ext: 101</p>
+                    <p class="staff-contact">Email: essienjosephmartinkojo@gmail.com</p>
+                    <p class="staff-contact">Tell: +233 24 521 4792</p>
                 </div>
                 <div class="staff-member">
                     <div class="staff-img">👩‍🏫</div>
                     <h4>Ms. Suzie Sam Odoom</h4>
                     <div class="staff-role">Head of Academics</div>
-                    <p class="staff-contact">Email: s.odoom@essienacademy.edu.gh</p>
-                    <p class="staff-contact">Ext: 102</p>
+                    <p class="staff-contact">Email: suzieodoom@gmail.com</p>
+                    <p class="staff-contact">Tell: +233 20 604 1650</p>
                 </div>
                 <div class="staff-member">
                     <div class="staff-img">👨‍🏫</div>
                     <h4>Mr. Anthony Dancan</h4>
                     <div class="staff-role">Admissions Director</div>
                     <p class="staff-contact">Email: a.dancan@essienacademy.edu.gh</p>
-                    <p class="staff-contact">Ext: 103</p>
+                    <p class="staff-contact">Tell: +233 24 260 1747</p>
                 </div>
                 <div class="staff-member">
                     <div class="staff-img">👩‍🏫</div>
                     <h4>Ms. Linda Essien</h4>
                     <div class="staff-role">Student Affairs</div>
                     <p class="staff-contact">Email: l.essien@essienacademy.edu.gh</p>
-                    <p class="staff-contact">Ext: 104</p>
+                    <p class="staff-contact">Tell: +233 54 154 4050</p>
                 </div>
             </div>
         </div>
