--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
         </div>
         <nav id="main-nav">
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html" style="color: var(--accent); background: var(--glass-dark);">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="academics.html">Academics</a></li>
             <li><a href="admissions.html">Admissions</a></li>
@@ -603,8 +603,8 @@
         <div class="footer-section">
           <h3>Contact Us</h3>
           <p>Email: info@essienacademy.edu.gh</p>
-          <p>Phone: +233 XX XXX XXXX</p>
-          <p>Address: Education Street, Academic City, Ghana</p>
+          <p>Phone: +233 24 260 1747</p>
+          <p>Address: Adjuah Street, Takoradi, Ghana</p>
         </div>
         <div class="footer-section">
           <h3>Quick Links</h3>
@@ -617,7 +617,7 @@
           <h3>Follow Us</h3>
           <a href="#">Facebook</a>
           <a href="#">Instagram</a>
-          <a href="#">Twitter</a>
+          <a href="#">WhatsApp</a>
           <a href="#">YouTube</a>
         </div>
       </div>
