--- a/about.html
+++ b/about.html
@@ -733,25 +733,25 @@
                     <div class="staff-img">👨‍🏫</div>
                     <h4>Mr. Joseph Martin Essien</h4>
                     <div class="staff-role">Founder & Director</div>
-                    <p>M.Ed. Educational Leadership, 20+ years experience</p>
+                    <p>Title or Designation at EEA</p>
                 </div>
                 <div class="staff-member">
                     <div class="staff-img">👩‍🏫</div>
                     <h4>Ms. Suzie Sam Odoom</h4>
                     <div class="staff-role">Head of Academics</div>
-                    <p>M.Sc. Curriculum Development, 15 years at EEA</p>
+                    <p>Title</p>
                 </div>
                 <div class="staff-member">
                     <div class="staff-img">👨‍🏫</div>
                     <h4>Mr. Anthony Dancan</h4>
                     <div class="staff-role">Student Affairs</div>
-                    <p>M.A. Counseling Psychology, 12 years at EEA</p>
+                    <p>Title</p>
                 </div>
                 <div class="staff-member">
                     <div class="staff-img">👩‍🏫</div>
                     <h4>Ms. Linda Essien</h4>
                     <div class="staff-role">Spiritual Development</div>
-                    <p>M.Div. Theology, Chaplaincy certification</p>
+                    <p>Title</p>
                 </div>
             </div>
         </div>
