--- a/admissions.html
+++ b/admissions.html
@@ -814,6 +814,16 @@
             <h3>Admissions Requirements</h3>
             <div class="requirements-grid">
                 <div class="requirement-card">
+                    <h4>Early Childhood (Crèche - Kindergarten)</h4>
+                    <ul class="requirement-list">
+                        <li>Completed application form</li>
+                        <li>Birth certificate</li>
+                        <li>Immunization records</li>
+                        <li>Two recent passport photos</li>
+                        <li>Medical report (if applicable)</li>
+                    </ul>
+                </div>
+                <div class="requirement-card">
                     <h4>Elementary School (P1-P3)</h4>
                     <ul class="requirement-list">
                         <li>Completed application form</li>
@@ -871,15 +881,26 @@
                             <label for="grade">Grade Applying For *</label>
                             <select id="grade" name="grade" class="form-control" required>
                                 <option value="">Select Grade</option>
-                                <option value="p1">Primary 1</option>
-                                <option value="p2">Primary 2</option>
-                                <option value="p3">Primary 3</option>
-                                <option value="p4">Primary 4</option>
-                                <option value="p5">Primary 5</option>
-                                <option value="p6">Primary 6</option>
-                                <option value="jhs1">JHS 1</option>
-                                <option value="jhs2">JHS 2</option>
-                                <option value="jhs3">JHS 3</option>
+                                <optgroup label="Early Childhood">
+                                    <option value="creche">Crèche (6 months - 2 years)</option>
+                                    <option value="nursery1">Nursery 1 (2-3 years)</option>
+                                    <option value="nursery2">Nursery 2 (3-4 years)</option>
+                                    <option value="kg1">Kindergarten 1 (4-5 years)</option>
+                                    <option value="kg2">Kindergarten 2 (5-6 years)</option>
+                                </optgroup>
+                                <optgroup label="Primary School">
+                                    <option value="p1">Primary 1</option>
+                                    <option value="p2">Primary 2</option>
+                                    <option value="p3">Primary 3</option>
+                                    <option value="p4">Primary 4</option>
+                                    <option value="p5">Primary 5</option>
+                                    <option value="p6">Primary 6</option>
+                                </optgroup>
+                                <optgroup label="Junior High School">
+                                    <option value="jhs1">JHS 1</option>
+                                    <option value="jhs2">JHS 2</option>
+                                    <option value="jhs3">JHS 3</option>
+                                </optgroup>
                             </select>
                         </div>
                         <div class="form-group">
@@ -889,7 +910,7 @@
                     </div>
                     
                     <div class="form-group">
-                        <label for="currentSchool">Current School</label>
+                        <label for="currentSchool">Current School/Care Center</label>
                         <input type="text" id="currentSchool" name="currentSchool" class="form-control">
                     </div>
                     
