--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
   <!-- Hero Section -->
   <section class="hero">
     <div class="container">
-      <h2>Rest Not; Aspire to Greater Heights</h2>
+      <h2>Rest Not; Aspire a Greater Heights</h2>
       <p>Essien's Excellence Academy provides Christ-centered education that develops the next generation of leaders through academic excellence and character development.</p>
       <a href="admissions.html" class="btn">Apply Now</a>
     </div>
