--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <!-- Favicon -->
   <link rel="icon" href="logo.png" type="image/png">
   <link rel="shortcut icon" href="logo.png" type="image/png">
+  <!-- Google Search Console Verification -->
+  <meta name="google-site-verification" content="RuFJnRvLw_Ca8e8r36sBcByIurnVPUOPLVLIZPkJgHU" />
   <style>
     :root {
       --primary: #000000;
