--- a/index.html
+++ b/index.html
@@ -533,15 +533,16 @@
           <span></span>
           <span></span>
         </div>
-        <nav id="main-nav">
-          <ul>
-            <li><a href="index.html" style="color: var(--accent); background: var(--glass-dark);">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="academics.html">Academics</a></li>
-            <li><a href="admissions.html">Admissions</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </nav>
+      <nav id="main-nav">
+    <ul>
+        <li><a href="index.html" style="color: var(--accent); background: var(--glass-dark);">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="academics.html">Academics</a></li>
+        <li><a href="admissions.html">Admissions</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
+</nav>
       </div>
     </div>
   </header>
