--- a/about.html
+++ b/about.html
@@ -647,15 +647,16 @@
                     <span></span>
                     <span></span>
                 </div>
-                <nav id="main-nav">
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html" style="color: var(--accent); background: var(--glass-dark);">About</a></li>
-                        <li><a href="academics.html">Academics</a></li>
-                        <li><a href="admissions.html">Admissions</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </nav>
+               <nav id="main-nav">
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html" style="color: var(--accent); background: var(--glass-dark);">About</a></li>
+        <li><a href="academics.html">Academics</a></li>
+        <li><a href="admissions.html">Admissions</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
+</nav>
             </div>
         </div>
     </header>
