--- a/admissions.html
+++ b/admissions.html
@@ -755,14 +755,15 @@
                     <span></span>
                 </div>
                 <nav id="main-nav">
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="academics.html">Academics</a></li>
-                        <li><a href="admissions.html" style="color: var(--accent); background: var(--glass-dark);">Admissions</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="academics.html">Academics</a></li>
+        <li><a href="admissions.html" style="color: var(--accent); background: var(--glass-dark);">Admissions</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
+</nav>
             </div>
         </div>
     </header>
