--- a/gallery.html
+++ b/gallery.html
@@ -721,7 +721,7 @@
                     </div>
                 </div>
 
-                <!-- Computing Lab Category -->
+                <!-- Computing Lab Category - UPDATED WITH YOUR IMAGES -->
                 <div class="category-card glass-effect">
                     <div class="category-header">
                         <div class="category-icon">💻</div>
@@ -729,22 +729,28 @@
                     </div>
                     <div class="slideshow-container">
                         <div class="slideshow" id="computing-slideshow">
-                            <div class="slide active" style="background-image: url('https://images.unsplash.com/photo-1518709268805-4e9042af2176?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80');">
+                            <div class="slide active" style="background-image: url('https://i.postimg.cc/NK8xhf5W/computer-lab-jpg.jpg');">
                                 <div class="slide-content">
                                     <h4 class="slide-title">Modern Computer Lab</h4>
                                     <p class="slide-description">State-of-the-art technology for digital learning</p>
                                 </div>
                             </div>
-                            <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1550751827-4bd374c3f58b?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80');">
+                            <div class="slide" style="background-image: url('https://i.postimg.cc/JsCQdB49/computer-lab2-jpg.jpg');">
                                 <div class="slide-content">
-                                    <h4 class="slide-title">Coding Workshop</h4>
-                                    <p class="slide-description">Students learning programming skills</p>
+                                    <h4 class="slide-title">Advanced Computing</h4>
+                                    <p class="slide-description">Students developing essential technology skills</p>
                                 </div>
                             </div>
-                            <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1542831371-29b0f74f9713?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80');">
+                            <div class="slide" style="background-image: url('https://i.postimg.cc/RW1TrVND/computer-lab3-jpg.jpg');">
                                 <div class="slide-content">
-                                    <h4 class="slide-title">Digital Literacy</h4>
-                                    <p class="slide-description">Developing essential technology skills</p>
+                                    <h4 class="slide-title">Digital Learning Space</h4>
+                                    <p class="slide-description">Modern facilities for 21st century education</p>
+                                </div>
+                            </div>
+                            <div class="slide" style="background-image: url('https://i.postimg.cc/FYbxts7n/computer-lab4-jpg.jpg');">
+                                <div class="slide-content">
+                                    <h4 class="slide-title">Technology Integration</h4>
+                                    <p class="slide-description">Preparing students for the digital future</p>
                                 </div>
                             </div>
                         </div>
@@ -755,6 +761,7 @@
                         <span class="nav-dot active" onclick="goToSlide('computing', 0)"></span>
                         <span class="nav-dot" onclick="goToSlide('computing', 1)"></span>
                         <span class="nav-dot" onclick="goToSlide('computing', 2)"></span>
+                        <span class="nav-dot" onclick="goToSlide('computing', 3)"></span>
                     </div>
                 </div>
 
