--- a/gallery.html
+++ b/gallery.html
@@ -765,7 +765,7 @@
                     </div>
                 </div>
 
-                <!-- Events Category -->
+                <!-- Events Category - UPDATED WITH YOUR IMAGES -->
                 <div class="category-card glass-effect">
                     <div class="category-header">
                         <div class="category-icon">🎉</div>
@@ -773,22 +773,58 @@
                     </div>
                     <div class="slideshow-container">
                         <div class="slideshow" id="events-slideshow">
-                            <div class="slide active" style="background-image: url('https://images.unsplash.com/photo-1540575467063-178a50c2df87?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80');">
+                            <div class="slide active" style="background-image: url('https://i.postimg.cc/XZm0P85W/cultural-day-jpg.jpg');">
                                 <div class="slide-content">
-                                    <h4 class="slide-title">Cultural Day</h4>
-                                    <p class="slide-description">Celebrating diversity and traditions</p>
+                                    <h4 class="slide-title">Cultural Day Celebration</h4>
+                                    <p class="slide-description">Students showcasing traditional attire and heritage</p>
                                 </div>
                             </div>
-                            <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1533174072545-7a4b6ad7a6c3?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80');">
+                            <div class="slide" style="background-image: url('https://i.postimg.cc/94rh1SrG/cultural-day2-jpg.jpg');">
                                 <div class="slide-content">
-                                    <h4 class="slide-title">Science Fair</h4>
-                                    <p class="slide-description">Showcasing student innovations</p>
+                                    <h4 class="slide-title">Traditional Dance Performance</h4>
+                                    <p class="slide-description">Colorful cultural performances by our students</p>
                                 </div>
                             </div>
-                            <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1511795409834-ef04bbd61622?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80');">
+                            <div class="slide" style="background-image: url('https://i.postimg.cc/XG506CKn/cultural-day3-jpg.jpg');">
                                 <div class="slide-content">
-                                    <h4 class="slide-title">Awards Ceremony</h4>
-                                    <p class="slide-description">Recognizing student achievements</p>
+                                    <h4 class="slide-title">Cultural Heritage Display</h4>
+                                    <p class="slide-description">Celebrating Ghana's rich cultural diversity</p>
+                                </div>
+                            </div>
+                            <div class="slide" style="background-image: url('https://i.postimg.cc/hQbWfR5q/cultural-day4-jpg.jpg');">
+                                <div class="slide-content">
+                                    <h4 class="slide-title">Traditional Attire Parade</h4>
+                                    <p class="slide-description">Students proudly displaying cultural costumes</p>
+                                </div>
+                            </div>
+                            <div class="slide" style="background-image: url('https://i.postimg.cc/XXw029Y0/cultural-day5-jpg.jpg');">
+                                <div class="slide-content">
+                                    <h4 class="slide-title">Cultural Unity Gathering</h4>
+                                    <p class="slide-description">Bringing together diverse traditions and customs</p>
+                                </div>
+                            </div>
+                            <div class="slide" style="background-image: url('https://i.postimg.cc/ppRM3ymT/cultural-day6-jpg.jpg');">
+                                <div class="slide-content">
+                                    <h4 class="slide-title">Heritage Celebration</h4>
+                                    <p class="slide-description">Honoring our cultural roots and traditions</p>
+                                </div>
+                            </div>
+                            <div class="slide" style="background-image: url('https://i.postimg.cc/Mv5JwxBK/cultural-day7-jpg.jpg');">
+                                <div class="slide-content">
+                                    <h4 class="slide-title">Cultural Exchange</h4>
+                                    <p class="slide-description">Students learning about different traditions</p>
+                                </div>
+                            </div>
+                            <div class="slide" style="background-image: url('https://i.postimg.cc/Lqnpv7ny/awards-ceremony-jpg.jpg');">
+                                <div class="slide-content">
+                                    <h4 class="slide-title">Academic Excellence Awards</h4>
+                                    <p class="slide-description">Recognizing outstanding student achievements</p>
+                                </div>
+                            </div>
+                            <div class="slide" style="background-image: url('https://i.postimg.cc/dhWF2vtY/awards-ceremony2-jpg.jpg');">
+                                <div class="slide-content">
+                                    <h4 class="slide-title">Honors Ceremony</h4>
+                                    <p class="slide-description">Celebrating academic success and hard work</p>
                                 </div>
                             </div>
                         </div>
@@ -799,6 +835,12 @@
                         <span class="nav-dot active" onclick="goToSlide('events', 0)"></span>
                         <span class="nav-dot" onclick="goToSlide('events', 1)"></span>
                         <span class="nav-dot" onclick="goToSlide('events', 2)"></span>
+                        <span class="nav-dot" onclick="goToSlide('events', 3)"></span>
+                        <span class="nav-dot" onclick="goToSlide('events', 4)"></span>
+                        <span class="nav-dot" onclick="goToSlide('events', 5)"></span>
+                        <span class="nav-dot" onclick="goToSlide('events', 6)"></span>
+                        <span class="nav-dot" onclick="goToSlide('events', 7)"></span>
+                        <span class="nav-dot" onclick="goToSlide('events', 8)"></span>
                     </div>
                 </div>
 
